# cudnn-frontend

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  Gemfile  README.FE.0.x.md  README.FE.1.0.md  README.md  _config.yml  flake.nix  in-the-wild.html  index.md  meson.build  pyproject.toml  requirements.txt  setup.py
python/: CMakeLists.txt  properties.cpp  pycudnn.cpp
python/cudnn/: README.md  __init__.py  api_base.py  datatypes.py  graph.py  wrapper.py
python/cudnn/discrete_grouped_gemm/: __init__.py  discrete_kernel_utils.py  moe_persistent_scheduler.py  moe_sched_extension.py  moe_utils.py
python/cudnn/experimental/: __init__.py
python/cudnn/gemm_amax/: __init__.py  api.py  dense_blockscaled_gemm_persistent_amax.py
python/cudnn/gemm_dsrelu/: __init__.py  api.py  dense_blockscaled_gemm_persistent_dsrelu_quant.py
python/cudnn/gemm_srelu/: __init__.py  api.py  dense_blockscaled_gemm_persistent_srelu_quant.py
python/cudnn/gemm_swiglu/: __init__.py  api.py  dense_blockscaled_gemm_persistent_swiglu_interleaved_quant.py  dense_gemm_persistent_swiglu.py
python/cudnn/grouped_gemm/: __init__.py  moe_kernel_helpers.py  moe_persistent_scheduler.py  moe_sched_extension.py  moe_utils.py  utils.py
python/cudnn/native_sparse_attention/: __init__.py  sparse_attention.md  utils.py
python/cudnn/ops/: __init__.py  causal_conv1d.py
python/cudnn/rmsnorm_rht_amax/: __init__.py  api.py  kernel.py
python/cudnn/sdpa/: __init__.py  api.py  fmha_backward_sm100_2kernel.py  fmha_dkdv_d256_sm100.py  fmha_dq_d256_sm100.py  fmha_utils.py  utils.py
python/pygraph/: norm.cpp  pointwise.cpp  pygraph.cpp  pygraph.h  sdpa.cpp
python_bindings/: CMakeLists.txt  cudnn_frontend_bindings.cpp  cudnn_frontend_properties.cpp  cudnn_frontend_pygraph.cpp  properties.cpp  pycudnn.cpp  pyplans.cpp  pyplans.h
python_bindings/pygraph/: norm.cpp  pointwise.cpp  pygraph.cpp  pygraph.h  sdpa.cpp
samples/: .gdb_history  CMakeLists.txt  Makefile  README.md  catch.cpp  conv_sample.cpp  conv_sample.h  cpu_references.h  error_util.h  f16_flash_mha_sample.cpp  f16_flash_mha_sample.h  fp16_dev.cu  fp16_dev.h  fp16_emu.cpp  fp16_emu.h  fp8_flash_mha_sample.cpp  fp8_flash_mha_sample.h  fp8_sample.cpp  fp8_sample.h  fused_mha_sample.cpp  fused_mha_sample.h  fusion_sample.cpp  fusion_sample.h  helpers.cpp  helpers.h  mha_sample.cpp  mha_sample.h  norm_samples.cpp  norm_samples.h  resnet_sample.cpp  resnet_sample.h  resnet_test_list.cpp  samples_common.mk  test_list.cpp
samples/cpp/: CMakeLists.txt  autotuning.cpp  batchnorm.cpp  convolutions.cpp  dgrads.cpp  layernorm.cpp  matmuls.cpp  mha.cpp  pointwise.cpp  resample.cpp  rmsnorm.cpp  serialization.cpp  wgrads.cpp
samples/cpp/causal_conv1d/: causal_conv1d.cpp
samples/cpp/convolution/: conv_dynamic_shape_benchmark.cpp  dgrads.cpp  fp8_fprop.cpp  fprop.cpp  int8_fprop.cpp  wgrads.cpp
samples/cpp/matmul/: blackwell_nvfp4_mxfp8_block_scale_matmul.cpp  complex_fp32_matmul.cpp  fp8_matmul.cpp  general_block_scale_matmul.cpp  int8_matmul.cpp  matmuls.cpp  mixed_matmul.cpp  nvfp4_mxfp8_matmul.cpp
samples/cpp/membound/: boolean_fusion.cpp  concat.cpp  membound_fusion.cpp  reshape.cpp  slice.cpp  transpose.cpp
samples/cpp/misc/: autotuning.cpp  compile_time_constant_example.cpp  cudagraphs.cpp  custom_plan.cpp  (+7 more)
samples/legacy_samples/: CMakeLists.txt  conv_sample.cpp  conv_sample.h  cpu_references.h  f16_flash_mha_sample.cpp  f16_flash_mha_sample.h  fp16_dev.cu  fp16_emu.cpp  fp8_flash_mha_sample.cpp  fp8_flash_mha_sample.h  fp8_sample.cpp  fp8_sample.h  fused_mha_sample.cpp  fused_mha_sample.h  fusion_sample.cpp  fusion_sample.h  helpers.cpp  norm_samples.cpp  norm_samples.h  resnet_sample.h  resnet_test_list.cpp  test_list.cpp
samples/llama/: 100_download_weight.py  101_hf_llama_tieout.py  102_torch_llama_tieout.py  103_cudnn_llama_tieout.py  104_torch_llama_nvtx.py  105_cudnn_llama_nvtx.py  README.md  analysis.md  decode_nvtx_profile.py
samples/llm_coverage/: README.md  test_gqa_b+h+s+d.py  test_linear+swish_1+bs+d.py  test_linear_1+bs+d.py  test_linear_b+s+d.py  test_linear_b+s+d_fp32compute.py  test_rmsnorm_b+s+d.py  test_rmsnorm_bs+d.py  test_rope_b+s+h+d.py  test_swiglu_1+bs+d.py  test_swiglu_layer_1+bs+d.py
samples/python/: 00_introduction.ipynb  01_graph_building.ipynb  01_matmul_bias.ipynb  02_low_level_api.ipynb  02_sdpa_graph_serialization.ipynb  03_mixed_precision_matmul.ipynb  10_matrix_multiplication.ipynb  20_layernorm.ipynb  20_layernorm_forward.ipynb  21_layernorm_backward.ipynb  22_layernorm_inference.ipynb  23_layernorm_with_pointwise_add_fusion.ipynb  24_layernorm_zero_centered_gamma_forward_training_and_backward.ipynb  24_layernorm_zero_centered_gamma_inference.ipynb  24_rmsnorm.ipynb  25_batchnorm.ipynb  25_layernorm_forward_training_and_backward_with_relu_bitmask.ipynb  26_adaptive_layernorm_forward_training_and_backward.ipynb  26_layernorm_forward_training_and_backward_with_relu_bitmask.ipynb  26_layernorm_forward_training_and_backward_with_relu_no_bitmask.ipynb  27_instancenorm.ipynb  28_adaptive_layernorm_inference.ipynb  28_instancenorm_fusion.ipynb  29_batchnorm.ipynb  29_layernorm_zero_centered_gamma_forward_training_and_backward.ipynb  29_rmsnorm.ipynb  30_instancenorm.ipynb  30_layernorm_zero_centered_gamma_inference.ipynb  31_adaptive_layernorm_forward_training_and_backward.ipynb  31_instancenorm_fusion.ipynb  32_adaptive_layernorm_inference.ipynb  33_layernorm_forward_training_and_backward_with_relu_bitmask.ipynb  50_scaled_dot_product_attention.ipynb  50_sdpa_forward.ipynb  51_scaled_dot_product_attention_backward.ipynb  51_sdpa_backward.ipynb  52_scaled_dot_product_attention_with_paged_caches.ipynb  52_sdpa_with_paged_caches.ipynb  53_scaled_dot_product_attention_decode_with_paged_caches.ipynb  53_sdpa_decode_with_paged_caches.ipynb  (+15 more)
samples/utils/: error_util.h  helpers.h
test/cpp/: CMakeLists.txt  pointwise_tests.cpp  serialize.cpp  tensor.cpp  validate.cpp
test/unit_tests/: CMakeLists.txt  serialize.cpp  tensor.cpp  validate.cpp  version.cpp
tools/cudnn_repro/: README.md  pyproject.toml
(+2319 files in other folders)
