[build-system]
requires = ["setuptools>=64", "cmake>=3.18", "ninja==1.11.1.1", "pybind11[global]>=2.13,<3"]
build-backend = "setuptools.build_meta"

[project]
name = "nvidia-cudnn-frontend"
dynamic = ["version"]
description = "CUDNN FrontEnd python library"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "NVIDIA Proprietary Software"}
classifiers = [
    "Programming Language :: Python :: 3",
]

[tool.setuptools]
packages = {find = {where = ["python", "."], include = ["cudnn*", "include"], namespaces = true}}
package-dir = {"" = "python", "include" = "include"}
include-package-data = true

[project.urls]
"Homepage" = "https://github.com/nvidia/cudnn-frontend"
"Bug Tracker" = "https://github.com/nvidia/cudnn-frontend/issues"

[tool.setuptools.dynamic]
version = {attr = "cudnn.__version__"}

[tool.setuptools.package-data]
include = ["**/*"]

[project.optional-dependencies]
cutedsl = [
    "nvidia-cutlass-dsl[cu13]==4.4.1",
    "cuda-python",
    "torch",
    "apache-tvm-ffi",
    "torch-c-dlpack-ext",
]
